@@ -11,9 +11,6 @@ import sys
 # The directory to hold the translated and menuified tree.
 outdir = '/tmp'
 
-# The language.
-lang = 'site'
-
 LANGUAGES = (
 	('site', 'English'),
 	('nl', 'Nederlands'),
@@ -42,7 +39,7 @@ NOTES
 
 
 
-# Ugh, data 
+# Ugh, move to .ihtml.
 
 header = '''<HTML><!-- Generated by format-page.py; changes will be lost. !-->
 <HEAD>
@@ -132,7 +129,8 @@ def read_menu (f):
 		nm.append ((file, link))
 
 	return nm
-    
+
+
 def one_tab (depth, file):
 	'''
 	Return the menu to put at the top, and
@@ -211,7 +209,20 @@ def one_tab (depth, file):
 
 	return (menu_str, here_label)
 
-def do_one_file (in_file_name):
+
+def dir_lang (file, lang):
+	return string.join ([lang] + string.split (file, '/')[1:], '/')
+
+
+def file_lang (file, lang):
+	(base, ext) = os.path.splitext (file)
+	base = os.path.splitext (base)[0]
+	if lang and lang != 'site':
+		return base + '.' + lang + ext
+	return base + ext
+
+
+def do_one_file (in_file_name, out_file_name, lang):
 	(dir, here) = os.path.split (in_file_name)
 
 	here_dir = dir
@@ -226,25 +237,27 @@ def do_one_file (in_file_name):
 	html = open (in_file_name).read ()
 	
 	file_name = in_file_name
-	tabs = []
+	base_name = os.path.basename (file_name)
+	base = os.path.splitext (file_name)[0]
+	if lang != 'site':
+		base = os.path.splitext (base)[0]
 
-	depth = 0
 	is_index = re.search ('index.html$', file_name)
 
+	depth = 0
+	tabs = []
 	locations = []
+	x = file_name
 	while 1:
-		(dir, here) = os.path.split (file_name)
+		(dir, here) = os.path.split (x)
 		if os.path.exists (os.path.join (dir, 'GNUmakefile')):
 			break
-
-		(menu, here_label) = one_tab  (depth, file_name)
+		(menu, here_label) = one_tab  (depth, x)
 		if menu:
 			tabs.append (menu)
-
 		if here_label:
 			locations.append (here_label)
-		file_name = dir
-
+		x = dir
 		depth += 1
 
 	tabs.reverse ()
@@ -315,19 +328,15 @@ def do_one_file (in_file_name):
 	if is_index and depth == 1:
 		script = top_script
 
-	rel_name = string.join (string.split (dir, '/')[1:], '/')
+	rel_name = string.join (string.split (in_file_name, '/')[1:], '/')
 	available = filter (lambda x: lang != x[0] \
 			    and os.path.exists (os.path.join (x[0], rel_name)),
 			    LANGUAGES)
-	## python sux
-	## av_urls = map (lambda prefix, name: '<a href="%(depth_str)s/%(prefix)s/%(rel_name)s">%(name)s</a>' % vars ())
-	## language_menu = string.join (av_urls)
 
 	language_menu = ''
 	for prefix, name in available:
-		lang_depth = depth * '../'
-		language_menu += '<a href="%(lang_depth)s%(prefix)s%(rel_name)s">%(name)s</a>' % vars ()
-
+		lang_file = file_lang (base_name, prefix)
+		language_menu += '<a href="%(lang_file)s">%(name)s</a>' % vars ()
 	# Disable language selection until we have something useful.
 	if lang == 'site':
 		language_menu = ''
@@ -336,9 +345,26 @@ def do_one_file (in_file_name):
 		'depth': depth_str,
 		'title': titles[-1],
 		'script': script,
-		} + menu + main + nav_str + language_menu + footer
-	
-	open (os.path.join (outdir, in_file_name), 'w').write (page)
+		} + menu + main + nav_str ### + language_menu + footer
+
+	lang_dir = dir_lang (dir, lang)
+	def langify_url (match):
+		rel = match.group (1)
+		file = os.path.join (lang_dir, rel)
+		if os.path.isfile (file):
+			rel = file_lang (rel, lang)
+		elif os.path.isdir (file) \
+		   and os.path.isfile (os.path.join (file, 'index.html')):
+			rel = file_lang (os.path.join (rel, 'index.html'), lang)
+		return '''href="%(rel)s"''' % vars ()
+		
+	if lang != 'site':
+		page = re.sub ('''href=[\'"]([^/][^:\'"]*)[\'"]''',
+			       langify_url, page)
+
+	page += language_menu + footer
+	open (out_file_name, 'w').write (page)
+
 
 def do_options ():
 	global outdir
@@ -359,18 +385,20 @@ This script is licensed under the GNU GPL
 			assert unimplemented
 	return files
 
+
 def main ():
-	global lang
 	files = do_options ()
 
 	for f in files:
-		sys.stderr.write ('%s...\n' % f) 
+		sys.stderr.write ('%s...\n' % f)
 		lang = string.split (f, '/')[0]
-		if lang != 'site' and not os.path.exists (f):
-			f = string.join (['site'] + string.split (f, '/')[1:],
-					 '/')
-			sys.stderr.write ('[%s...]\n' % f)
-		do_one_file (f)
+		if lang == 'site':
+			o = f
+		else:
+			o = file_lang (dir_lang (f, 'site'), lang)
+		o = os.path.join (outdir, o)
+		do_one_file (f, o, lang)
+
 
 if __name__ == '__main__':
 	main ()
